Archive2/96/92dfa2084d361a/output
main.cpp: In function 'int main()':
main.cpp:4:13: error: cannot declare reference to 'int&', which is not a typedef or a template type argument
     int& && ref = i;
             ^
main.cpp:4:13: warning: unused variable 'ref' [-Wunused-variable]
